@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-26T08:12:31Z",
-  "count_outdated" : 1726,
-  "uniques_outdated" : 599,
+  "timestamp" : "2023-09-26T16:11:47Z",
+  "count_outdated" : 1732,
+  "uniques_outdated" : 600,
   "count" : 1778,
   "uniques" : 610,
   "views" : [
-    {
-      "timestamp": "2023-09-12T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-13T00:00:00Z",
       "count": 2,
