@@ -1,12 +1,7 @@
 {
-  "count": 52,
-  "uniques": 11,
+  "count": 46,
+  "uniques": 10,
   "views": [
-    {
-      "timestamp": "2023-09-12T00:00:00Z",
-      "count": 6,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-13T00:00:00Z",
       "count": 2,
