@@ -1,3 +1,12 @@
+2023-09-26T16:11:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6315415223 # 1932
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
+* notice: last 14d: unq all: 10 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 599 1726 / 610 1778
+* notice: next accum: outdated-unq outdated-all / unq all: 600 1732 / 610 1778
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-12] / []
+
 2023-09-26T08:12:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6309897414 # 1931
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
